restyled animations to fade. added current project to portfolio. fixed routing flicker.

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
   font-size: 300%;
 }
 
-.jumbotron_aboutpic{
+/*.jumbotron_aboutpic{
   height: 380px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -108,9 +108,9 @@
   color: white;
   font-family: mFont;
   font-weight:  bold;
-  /*-webkit-text-stroke: 0.001px black;*/
+  /*-webkit-text-stroke: 0.001px black;
   font-size: 300%;
-}
+}*/
 
 .text_left{
     text-align: left;
@@ -213,7 +213,7 @@
 
 
 
-.ng-enter           { animation: slideInLeft 0.5s both ease-in; z-index: 8888; }
+/*.ng-enter           { animation: slideInLeft 0.5s both ease-in; z-index: 8888; }
 .ng-leave           { animation: slideOutRight 0.5s both ease-in; z-index: 9999; }
 
 .ng-enter       { z-index: -8888; }
@@ -222,39 +222,37 @@
 /* page specific animations ------------------------ */
 
 /* home -------------------------- */
-.page-home.ng-enter         { animation:slideInLeft 0.5s both ease-in; }
-.page-home.ng-leave         { animation:slideOutRight 0.5s both ease-in; }
+/*.page-home.ng-enter         { animation:slideInLeft 0.5s both ease-in; }
+.page-home.ng-leave         { animation:slideOutRight 0.5s both ease-in; }*/
 
 /* about ------------------------ */
-.page-about.ng-enter        { animation:slideInLeft 0.5s both ease-in; }
-.page-about.ng-leave        { animation:slideOutRight 0.5s both ease-in; }
+/*.page-about.ng-enter        { animation:slideInLeft 0.5s both ease-in; }
+.page-about.ng-leave        { animation:slideOutRight 0.5s both ease-in; }*/
 
 /* about ------------------------ */
-.page-portfolio.ng-enter        { animation:slideInLeft 0.5s both ease-in; }
-.page-portfolio.ng-leave        { animation:slideOutRight 0.5s both ease-in; }
+/*.page-portfolio.ng-enter        { animation:slideInLeft 0.5s both ease-in; }
+.page-portfolio.ng-leave        { animation:slideOutRight 0.5s both ease-in; }*/
 
 /* contact ---------------------- */
-.page-contact.ng-enter      { animation:slideInLeft 0.5s both ease-in; }
-.page-contact.ng-leave      { animation:slideOutRight 0.5s both ease-in; }
+/*.page-contact.ng-enter      { animation:slideInLeft 0.5s both ease-in; }
+.page-contact.ng-leave      { animation:slideOutRight 0.5s both ease-in; }*/
 
 
-/*.ng-hide-add         { animation: fadeOut 2.0s both ease-in; }
+.ng-enter         { animation: fadeIn 0.5s both ease-in; }
 
+.ng-leave      { animation: fadeOut 0.5s both ease-in; }
 
-.ng-hide-remove      { animation: fadeIn 2.0s both ease-in; }
+.page-home.ng-enter      { animation:fadeIn 0.5s both ease-in; }
+.page-home.ng-leave      { animation:fadeOut 0.5s both ease-in; }
 
-.page-about.ng-hide-add         { animation: fadeIn 2.0s both ease-in; }
-.page-about.ng-hide-remove      { animation: fadeOut 2.0s both ease-in; }
+.page-experience.ng-enter       { animation:fadeIn 0.5s both ease-in; }
+.page-experience.ng-leave     { animation:fadeOut 0.5s both ease-in; }
 
-.page-experience.ng-hide-add         { animation: fadeIn 2.0s both ease-in; }
-.page-experience.ng-hide-remove      { animation: fadeOut 2.0s both ease-in; }
+.page-portfolio.ng-enter        { animation:fadeIn 0.5s both ease-in; }
+.page-portfolio.ng-leave     { animation:fadeOut 0.5s both ease-in; }
 
-.page-portfolio.ng-hide-add         { animation: fadeIn 2.0s both ease-in; }
-.page-portfolio.ng-hide-remove      
-
-.page-contact.ng-hide-add         { animation: fadeIn 2.0s both ease-in; }
-.page-contact.ng-hide-remove      { animation: fadeOut 2.0s both ease-in; }*/
-
+.page-contact.ng-enter         { animation:fadeIn 0.5s both ease-in; }
+.page-contact.ng-leave     { animation:fadeOut 0.5s both ease-in; }
 
 
 
